--- a/index.html
+++ b/index.html
@@ -37,11 +37,14 @@
         <div class="document">
             <h4>Document</h4>
             <ul>
-                <li><a href="Resume_Bharti_Gupta.docx" target="/blank"> Resume</a></li>
-                <li>Projects</li>
+                <li> <a href="Resume_Bharti_Gupta.docx" target="/blank"> Resume</a></li>
+                <li> <a href= "#">Projects </a> </li>
             </ul>
         </div>
     </div>
+    <footer>
+        <p class = "footer">Created by: Bharti Gupta</p>
+    </footer>
 
 </body>
 </html>
